versioned_docs/version-2.19/reference/targets/docker_image.mdx
---
title: docker_image
# The old-style `code...code` anchors are heading level 6, and shouldn't be visible in ToC
toc_max_heading_level: 5
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

The `docker_image` target describes how to build and tag a Docker image.

Any dependencies, as inferred or explicitly specified, will be included in the Docker build context, after being packaged if applicable.

By default, it will use a Dockerfile from the same directory as the BUILD file this target is defined in. Point at another file with the `source` field, or use the `instructions` field to have the Dockerfile contents verbatim directly in the BUILD file.

Dependencies on upstream/base images defined by another `docker_image` are inferred if referenced by a build argument with a default value of the target address.

Example:

```
# src/docker/downstream/Dockerfile
ARG BASE=src/docker/upstream:image
FROM $BASE
...
```

Backend: <span className="color--primary">`pants.backend.docker`</span>

---

<span className={styles.options}>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetagscode}
</div>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `scie-pants-linux-x86_64 --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedescriptioncode}
</div>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `scie-pants-linux-x86_64 list --documented ::` to see all targets with descriptions.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeextra_build_argscode}
</div>

## `extra_build_args`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`()`}
>

Build arguments (`--build-arg`) to use when building this image. Entries are either strings in the form `ARG_NAME=value` to set an explicit value; or just `ARG_NAME` to copy the value from Pants&#x27;s own environment.

Use `[docker].build_args` to set default build args for all images.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedependenciescode}
</div>

## `dependencies`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Addresses to other targets that this target depends on, e.g. `['helloworld/subdir:lib', 'helloworld/main.py:lib', '3rdparty:reqs#django']`.

This augments any dependencies inferred by Pants, such as by analyzing your imports. Use `scie-pants-linux-x86_64 dependencies` or `scie-pants-linux-x86_64 peek` on this target to get the final result.

See https://www.pantsbuild.org/v2.19/docs/targets for more about how addresses are formed, including for generated targets. You can also run `scie-pants-linux-x86_64 list ::` to find all addresses in your project, or `scie-pants-linux-x86_64 list dir` to find all addresses defined in that directory.

If the target is in the same BUILD file, you can leave off the BUILD file path, e.g. `:tgt` instead of `helloworld/subdir:tgt`. For generated first-party addresses, use `./` for the file path, e.g. `./main.py:tgt`; for all other generated targets, use `:tgt#generated_name`.

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codesourcecode}
</div>

## `source`

<Field
    type_repr={`str | None`}
    default_repr={`'Dockerfile'`}
>

The Dockerfile to use when building the Docker image.

Use the `instructions` field instead if you prefer not having the Dockerfile in your source tree.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeinstructionscode}
</div>

## `instructions`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

The `Dockerfile` content, typically one instruction per list item.

Use the `source` field instead if you prefer having the Dockerfile in your source tree.

Example:

```
# example/BUILD
docker_image(
  instructions=[
    "FROM base/image:1.0",
    "RUN echo example",
  ],
)
```

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codecontext_rootcode}
</div>

## `context_root`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

Specify which directory to use as the Docker build context root. This affects the file paths to use for the `COPY` and `ADD` instructions. For example, whether `COPY files/f.txt` should look for the file relative to the build root: `<build root>/files/f.txt` vs relative to the BUILD file: `<build root>/path_to_build_file/files/f.txt`.

Specify the `context_root` path as `files` for relative to build root, or as `./files` for relative to the BUILD file.

If `context_root` is not specified, it defaults to `[docker].default_context_root`.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeimage_tagscode}
</div>

## `image_tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`('latest',)`}
>

Any tags to apply to the Docker image name (the version is usually applied as a tag).

tag may use placeholders in curly braces to be interpolated. The placeholders are derived from various sources, such as the Dockerfile instructions and build args.

See https://www.pantsbuild.org/v2.19/docs/tagging-docker-images.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#coderegistriescode}
</div>

## `registries`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`('<all default registries>',)`}
>

List of addresses or configured aliases to any Docker registries to use for the built image.

The address is a domain name with optional port for your registry, and any registry aliases are prefixed with `@` for addresses in the `[docker].registries` configuration section.

By default, all configured registries with `default = true` are used.

Example:

```
# pants.toml
[docker.registries.my-registry-alias]
address = "myregistrydomain:port"
default = false # optional

# example/BUILD
docker_image(
    registries = [
        "@my-registry-alias",
        "myregistrydomain:port",
    ],
)
```

The above example shows two valid `registry` options: using an alias to a configured registry and the address to a registry verbatim in the BUILD file.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#coderepositorycode}
</div>

## `repository`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

The repository name for the Docker image. e.g. `"<repository>/<name>"`.

It uses the `[docker].default_repository` by default.

Repository may use placeholders in curly braces to be interpolated. The placeholders are derived from various sources, such as the Dockerfile instructions and build args.

Additional placeholders for the repository field are: `name`, `directory`, `parent_directory`, and `default_repository`.

Registries may also configure the repository value for specific registries.

See the documentation for `[docker].default_repository` for more information.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeimage_labelscode}
</div>

## `image_labels`

<Field
    type_repr={`Dict[str, str] | None`}
    default_repr={`None`}
>

Provide image metadata.

Label value may use placeholders in curly braces to be interpolated. The placeholders are derived from various sources, such as the Dockerfile instructions and build args.

See [Docker labels](https://docs.docker.com/config/labels-custom-metadata/#manage-labels-on-objects) for more information.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeextra_build_hostscode}
</div>

## `extra_build_hosts`

<Field
    type_repr={`Dict[str, str] | None`}
    default_repr={`None`}
>

Extra hosts entries to be added to a container&#x27;s `/etc/hosts` file.

Use `[docker].build_hosts` to set default host entries for all images.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codesecretscode}
</div>

## `secrets`

<Field
    type_repr={`Dict[str, str] | None`}
    default_repr={`None`}
>

Secret files to expose to the build (only if BuildKit enabled).

Secrets may use absolute paths, or paths relative to your build root, or the BUILD file if prefixed with `./`. Paths to your home directory will be automatically expanded. The id should be valid as used by the Docker build `--secret` option. See [Docker secrets](https://docs.docker.com/engine/swarm/secrets/) for more information.

Example:

```
docker_image(
    secrets={
        "mysecret": "/var/secrets/some-secret",
        "repo-secret": "src/proj/secrets/some-secret",
        "home-dir-secret": "~/.config/some-secret",
        "target-secret": "./secrets/some-secret",
    }
)
```

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codesshcode}
</div>

## `ssh`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`()`}
>

SSH agent socket or keys to expose to the build (only if BuildKit enabled) (format: `default|<id>[=<socket>|<key>[,<key>]]`)

The exposed agent and/or keys can then be used in your `Dockerfile` by mounting them in your `RUN` instructions:

```
RUN --mount=type=ssh ...
```

See [Docker documentation](https://docs.docker.com/develop/develop-images/build_enhancements/#using-ssh-to-access-private-data-in-builds) for more information.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeskip_pushcode}
</div>

## `skip_push`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

If true, do not push this image to registries when running `scie-pants-linux-x86_64 publish`.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetarget_stagecode}
</div>

## `target_stage`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

Specify target build stage, rather than building the entire `Dockerfile`.

When using multi-stage build, you may name your stages, and can target them when building to only selectively build a certain stage. See also the `--docker-build-target-stage` option.

Read more about [multi-stage Docker builds](https://docs.docker.com/develop/develop-images/multistage-build/#stop-at-a-specific-build-stage)

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codepullcode}
</div>

## `pull`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

If true, then docker will always attempt to pull a newer version of the image.

NOTE: This option cannot be used on images that build off of &#x22;transitive&#x22; base images referenced by address (i.e. `FROM path/to/your/base/Dockerfile`).

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codesquashcode}
</div>

## `squash`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

If true, then docker will squash newly built layers into a single new layer.

Note that this option is only supported on a Docker daemon with experimental features enabled.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codebuild_networkcode}
</div>

## `build_network`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

Sets the networking mode for the run commands during build. Supported standard values are: bridge, host, none, and container:&#x3C;name|id&#x3E;. Any other value is taken as a custom network&#x27;s name to which the container should connect to.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codebuild_platformcode}
</div>

## `build_platform`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Set the target platform(s) for the build.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codecache_tocode}
</div>

## `cache_to`

<Field
    type_repr={`Dict[str, str] | None`}
    default_repr={`None`}
>

Export image build cache to an external cache destination.

This option requires BuildKit to be enabled via the Docker subsystem options.

Example:

```
docker_image(
    name="example-local-cache-backend",
    cache_to={
        "type": "local",
        "dest": "/tmp/docker-cache/example"
    },
    cache_from={
        "type": "local",
        "src": "/tmp/docker-cache/example"
    }
)
```

Values may use placeholders in curly braces to be interpolated. The placeholders are derived from various sources, such as the Dockerfile instructions and build args.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codecache_fromcode}
</div>

## `cache_from`

<Field
    type_repr={`Dict[str, str] | None`}
    default_repr={`None`}
>

Use an external cache source when building the image.

This option requires BuildKit to be enabled via the Docker subsystem options.

Example:

```
docker_image(
    name="example-local-cache-backend",
    cache_to={
        "type": "local",
        "dest": "/tmp/docker-cache/example"
    },
    cache_from={
        "type": "local",
        "src": "/tmp/docker-cache/example"
    }
)
```

Values may use placeholders in curly braces to be interpolated. The placeholders are derived from various sources, such as the Dockerfile instructions and build args.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeoutputcode}
</div>

## `output`

<Field
    type_repr={`Dict[str, str] | None`}
    default_repr={`FrozenDict({'type': 'docker'})`}
>

Sets the export action for the build result.

This option requires BuildKit to be enabled via the Docker subsystem options.

When using `pants publish` to publish Docker images to a registry, the output type must be &#x27;docker&#x27;, as `publish` expects that the built images exist in the local image store.

Currently, multi-platform images cannot be exported with the &#x27;docker&#x27; export type, although experimental support is available with the [containerd image store](https://docs.docker.com/desktop/containerd/)

Values may use placeholders in curly braces to be interpolated. The placeholders are derived from various sources, such as the Dockerfile instructions and build args.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeoutput_pathcode}
</div>

## `output_path`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

Where the built asset should be located.

If undefined, this will use the path to the BUILD file, followed by the target name. For example, `src/python/project:app` would be `src.python.project/app.ext`.

When running `scie-pants-linux-x86_64 package`, this path will be prefixed by `--distdir` (e.g. `dist/`).

Warning: setting this value risks naming collisions with other package targets you may have.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#coderestartablecode}
</div>

## `restartable`

<Field
    type_repr={`bool`}
    default_repr={`False`}
>

If true, runs of this target with the `run` goal may be interrupted and restarted when its input files change.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeskip_hadolintcode}
</div>

## `skip_hadolint`

<Field
    type_repr={`bool`}
    default_repr={`False`}
    backend="pants.backend.docker.lint.hadolint"
>

If true, don&#x27;t run hadolint on this target&#x27;s Dockerfile.

</Field>

</span>
